--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,31 +1,38 @@
 html, body {
-	height: 100%;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-	background: #FAFAFA;
-	font-family: 'Helvetica Neue', arial, sans-serif;
-	font-weight: 400;
-	color: #444;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    background: #FAFAFA;
+    font-family: 'Helvetica Neue', arial, sans-serif;
+    font-weight: 400;
+    color: #444;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 /* TODO Clean this up */
 div.CodeMirror {
-	height: 100%;
-	background: #FAFAFA;
-	padding: 20px;
+    height: 100%;
+    background: #FAFAFA;
+    padding: 20px;
 }
 
 .CodeMirror pre {
-	line-height: 1.6em;
+    line-height: 1.6em;
 }
 
 .CodeMirror-gutters {
-	display: none;
+    display: none;
+}
+
+
+/* Base app styles */
+/* Move this to different files eventually */
+.app {
+    height: 100%;
 }
