--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -18,8 +18,7 @@ html, body {
 /* TODO Clean this up */
 div.CodeMirror {
     height: 100%;
-    background: #FAFAFA;
-    padding: 20px;
+    padding: 40px 60px;
 }
 
 .CodeMirror pre {
