--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -19,6 +19,11 @@ html, body {
 div.CodeMirror {
   height: 100%;
   padding: 40px 60px;
+  overflow: hidden;
+}
+
+.CodeMirror-vscrollbar {
+  display: none !important;
 }
 
 .CodeMirror pre {
@@ -29,95 +34,130 @@ div.CodeMirror {
   display: none;
 }
 
+.CodeMirror-scroll {
+  overflow-x: hidden !important;
+  overflow-y: scroll !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+.CodeMirror-scroll::-webkit-scrollbar {
+  width: 10px;
+}
+
+.CodeMirror-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(242,250,255,0.33);
+  transition: all 2000ms ease-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(242,250,255,1);
+}
+
 
 /*
  * Base app styles
  * Move this to different files eventually
  */
-  .app {
-    height: 100%;
-    padding: 0;
-    display: flex;
-  }
+.app {
+  height: 100%;
+  padding: 0;
+  display: flex;
+}
 
-  .editable {
-    height: 100%;
-    flex-grow: 1;
-  }
-  /*
-   * Sidebar styles
-   */
-  .sidebar-container {
-    height: 100%;
-    display: flex;
-  }
+.editable {
+  height: 100%;
+  flex-grow: 1;
+}
 
-  .sidebar {
-    font-size: 10pt;
-    font-weight: 600;
-    height: 100%;
-    display: flex;
-    background: #121E26;
-    color: #F2FAFF;
-  }
+/*
+ * Sidebar styles
+ */
+.sidebar-container {
+  height: 100%;
+  display: flex;
+}
 
-  .sidebar-column {
-    padding-top: 30px;
-  }
+.sidebar {
+  font-size: 10pt;
+  font-weight: 600;
+  height: 100%;
+  display: flex;
+  background: #121E26;
+  color: #F2FAFF;
+}
 
-  .sidebar-column.sidebar-link {
-    border-right: 1px solid #1D323D;
-    width: 150px;
-  }
+.sidebar-column {
+  padding-top: 30px;
+}
 
-  .sidebar-column.sidebar-note {
-    width: 300px;
-  }
+.sidebar-column.sidebar-link {
+  border-right: 1px solid #1D323D;
+  width: 150px;
+}
 
-  .sidebar-column .sidebar-no-filter {
-    padding-left: 15px;
-  }
+.sidebar-column.sidebar-note {
+  width: 300px;
+}
 
-  .sidebar.instances {
-    width: 250px;
-    background: #121E26;
-    color: #F2FAFF;
-    border-right: 1px solid #1D323D;
-  }
+.sidebar-column .sidebar-no-filter {
+  padding-left: 15px;
+}
 
-  .sidebar ul {
-    list-style-type: none;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-  }
+.sidebar.instances {
+  width: 250px;
+  background: #121E26;
+  color: #F2FAFF;
+  border-right: 1px solid #1D323D;
+}
 
-  .sidebar-link-category {
-    padding-top: 10px;
-  }
+.sidebar ul {
+  list-style-type: none;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
 
-  .sidebar-link-category-text {
-    font-weight: 300;
-    text-transform: uppercase;
-    font-size: 11px;
-    letter-spacing: 0.4em;
-    padding-left: 15px;
-  }
+.sidebar-link-category {
+  padding-top: 10px;
+}
 
-  .sidebar-link-category-list-item {
-    width: 100%;
-    padding: 7px 0 7px 15px;
-    cursor: pointer;
-    transition: background 150ms ease-out;
-  }
+.sidebar-link-category-text {
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 11px;
+  letter-spacing: 0.4em;
+  padding-left: 15px;
+}
 
-  .app.dark-theme .sidebar-link-category-list-item.selected,
-  .app.dark-theme .sidebar-note-list-item.selected {
-    background: #185675;
-  }
+.sidebar-link-category-list-item {
+  width: 100%;
+  padding: 7px 0 7px 15px;
+  cursor: pointer;
+  transition: background 150ms ease-out;
+}
 
-  .sidebar-note-list-item {
-    padding: 7px 15px;
-    cursor: pointer;
-    transition: background 150ms ease-out;
-  }
+.app.dark-theme .sidebar-link-category-list-item.selected,
+.app.dark-theme .sidebar-note-list-item.selected {
+  background: #185675;
+}
+
+.sidebar-note-list-item {
+  padding: 7px 15px;
+  cursor: pointer;
+  transition: background 150ms ease-out;
+}
+
+.sidebar-note-list-item-text {
+  font-weight: 300;
+}
+
+/* Scrollbar styling */
+/*::-webkit-scrollbar {*/
+  /*display: none;*/
+/*}*/
