Support knack apis in bundle and lose browser compatibility
Breaking changes

--- a/src/components/HyperMD/base.css
+++ b/src/components/HyperMD/base.css
@@ -5,7 +5,8 @@
     background: #FCF3E1;
 }
 
-.editable .cm-s-hypermd-light.cm-s-dark {
+.app.dark-theme .editable ,
+.app.dark-theme .editable .cm-s-hypermd-light.cm-s-dark {
     background: #203745;
     color: #F2FAFF;
 }
